2002-06-23  Christopher Faylor  <cgf@redhat.com>

	* lib/_cygwin_S_IEXEC.cc: Remove obsolete file.

2002-06-23  Christopher Faylor  <cgf@redhat.com>

	Use cygwin_{shm,ipc}.h instead of /sys/{shm,ipc}.h throughout.
	* sys/ipc.h: Remove.
	* sys/shm.h: Remove.
	* cygwin_ipc.h: New file.
	* cygwin_shm.h: New file.

2002-06-23  Christopher Faylor  <cgf@redhat.com>

	* cygwin.sc: Add recent changes from ld sources.

2002-06-23  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* winsup.h: Move #ifdef EXPCGF code into "winbase.h".
	* winbase.h: #ifdef EXPCGF code moved here from "winsup.h".

2002-06-12  Thomas Pfaff  <tpfaff@gmx.net>

	* thread.h (pthread::cleanup_stack): Renamed cleanup_handlers to
	cleanup_stack.
	* thread.cc (pthread::pthread): Ditto.
	(pthread::create): Fixed mutex verification.
	(pthread::push_cleanup_handler): Renamed cleanup_handlers to
	cleanup_stack.
	Mutex calls removed, used InterlockedExchangePointer instead.
	(pthread::pop_cleanup_handler): Renamed cleanup_handlers to
	cleanup_stack.
	(pthread::pop_all_cleanup_handlers): Ditto.
	(__pthread_once): Check state first and return if already done.
	(__pthread_join): DEADLOCK test reverted to __pthread_equal
	call.
	(__pthread_detach): Unlock mutex before deletion.

2002-06-21  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (cygrun.exe): Move -lgcc where it will do some good.

2002-06-21  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (stat64_to_stat32): Correctly evaluate st_rdev.
	(fstat64): Set st_rdev to same value as st_dev.
	(stat_worker): Ditto.

2002-06-21  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (alloc_sd): Carefully check owner_sid again after trying
	SIDs from cygheap.

2002-06-21  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (alloc_sd): Remove unnecessary retrieval of owner name.
	Check uid for current user first and use SIDs from cygheap if so.
	Set errno to EINVAL if user SID isn't retrievable.  Just print user SID
	as debug output.