@@ -248,7 +248,11 @@ fhandler_socket::fstat (struct __stat64 *buf, path_conv *pc)
 {
   int res = fhandler_base::fstat (buf, pc);
   if (!res)
-    buf->st_ino = (ino_t) get_handle ();
+    {
+      buf->st_mode &= ~_IFMT;
+      buf->st_mode |= _IFSOCK;
+      buf->st_ino = (ino_t) get_handle ();
+    }
   return res;
 }
 
